Update .claude/skills/ai-updates/SKILL.md Add .claude/skills/api-design-principles/SKILL.md Add .claude/skills/api-design-principles/assets/api-design-checklist.md Add .claude/skills/api-design-principles/assets/rest-api-template.py Add .claude/skills/api-design-principles/references/graphql-schema-design.md Add .claude/skills/api-design-principles/references/rest-best-practices.md Add .claude/skills/architecture-patterns/SKILL.md Add .claude/skills/async-python-patterns/SKILL.md Add .claude/skills/auth-implementation-patterns/SKILL.md Update .claude/skills/backend-patterns/SKILL.md Add .claude/skills/cost-optimization/SKILL.md Add .claude/skills/cqrs-implementation/SKILL.md Add .claude/skills/ddd-context-mapping/SKILL.md Add .claude/skills/ddd-strategic-design/SKILL.md Add .claude/skills/ddd-tactical-patterns/SKILL.md Add .claude/skills/dependency-upgrade/SKILL.md Update .claude/skills/deployment-patterns/SKILL.md Add .claude/skills/docker/SKILL.md Add .claude/skills/domain-driven-design/SKILL.md Update .claude/skills/e2e-testing/SKILL.md Add .claude/skills/event-sourcing/SKILL.md Update .claude/skills/exa-search/SKILL.md Add .claude/skills/javascript-testing/SKILL.md Add .claude/skills/jvm-advanced/SKILL.md Add .claude/skills/metrics-stack/SKILL.md Add .claude/skills/microservices-patterns/SKILL.md Add .claude/skills/modern-javascript/SKILL.md Add .claude/skills/multi-agent-patterns/SKILL.md Update .claude/skills/news-summary/SKILL.md Add .claude/skills/observability-engineer/SKILL.md Add .claude/skills/postgresql-patterns/SKILL.md Add .claude/skills/production-debugging/SKILL.md Add .claude/skills/prompt-engineering-patterns/SKILL.md Add .claude/skills/python-design-patterns/SKILL.md Add .claude/skills/python-error-handling/SKILL.md Add .claude/skills/python-observability/SKILL.md Add .claude/skills/python-packaging/SKILL.md Update .claude/skills/python-patterns/SKILL.md Add .claude/skills/python-performance/SKILL.md Add .claude/skills/python-resilience/SKILL.md 